--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -128,7 +128,7 @@
                             {% for project in ongoing_project_lists %}
             
                             <div class="col-md-3 col-sm-6 item ongoing">
-                                <a href="{% url 'project_details' slug=project.slug %}"></a>
+                                
                                 <div class="product-item">
                                     <img src="{{ project.image.url }}" alt="" class="img-fluid">
                                     <div class="overlay">
@@ -138,7 +138,7 @@
                                         <a href="{% url 'project_details' slug=project.slug %}">Explore</a>
                                     </div>
                                 </div>
-                            </a>
+                            
 
                             </div>
                         
@@ -146,21 +146,7 @@
 
                             {% for project in latest_project_lists %}
                             <div class="col-md-3 col-sm-6 item latest">
-                                <div class="product-item">
-                                    <img src="{{ project.image.url }}" alt="" class="img-fluid">
-                                    <div class="overlay">
-                                        <p>{{ project.name }}</p>
-                                    </div>
-                                    <div class="explore">
-                                        <a href="">Explore</a>
-                                    </div>
-                                </div>
-
-                            </div>
-                            {% endfor %}
-
-                            {% for project in completed_project_lists %}
-                            <div class="col-md-3 col-sm-6 item completed">
+                                
                                 <div class="product-item">
                                     <img src="{{ project.image.url }}" alt="" class="img-fluid">
                                     <div class="overlay">
@@ -170,6 +156,24 @@
                                         <a href="{% url 'project_details' slug=project.slug %}">Explore</a>
                                     </div>
                                 </div>
+                                
+
+                            </div>
+                            {% endfor %}
+
+                            {% for project in completed_project_lists %}
+                            <div class="col-md-3 col-sm-6 item completed">
+                                
+                                <div class="product-item">
+                                    <img src="{{ project.image.url }}" alt="" class="img-fluid">
+                                    <div class="overlay">
+                                        <p>{{ project.name }}</p>
+                                    </div>
+                                    <div class="explore">
+                                        <a href="{% url 'project_details' slug=project.slug %}">Explore</a>
+                                    </div>
+                                </div>
+                                
 
                             </div>
                             {% endfor %}
